dist/1.0/bin/sample/retrieveUnpackaged/objects/Provisioning_Plan_Dependency__c.object
<CustomObject>
    <fields>
        <fullName>Associated_Child_Object__c</fullName>
        <description>Associated Child Object</description>
        <inlineHelpText>Associated Child Object</inlineHelpText>
        <label>Associated Child Object</label>
        <picklist>
            <picklistValues>
                <fullName>Order</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Associated_Parent_Object__c</fullName>
        <description>Associated Parent Object</description>
        <inlineHelpText>Associated Parent Object</inlineHelpText>
        <label>Associated Parent Object</label>
        <picklist>
            <picklistValues>
                <fullName>Order</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Child_Provisioning_Plan__c</fullName>
        <description>Child Provisioning Plan</description>
        <inlineHelpText>Child Provisioning Plan</inlineHelpText>
        <label>Child Provisioning Plan</label>
        <referenceTo>Provisioning_Plan__c</referenceTo>
        <relationshipLabel>Parent Provisioning Plan</relationshipLabel>
        <relationshipName>Parent_Provisioning_Plan</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Provisioning_Plan__c</fullName>
        <description>Parent Provisioning Plan</description>
        <inlineHelpText>Parent Provisioning Plan</inlineHelpText>
        <label>Parent Provisioning Plan</label>
        <referenceTo>Provisioning_Plan__c</referenceTo>
        <relationshipLabel>Child Provisioning Plan</relationshipLabel>
        <relationshipName>Child_Provisioning_Plan</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source_Record_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Technical field used for migration between environments.</description>
        <externalId>true</externalId>
        <inlineHelpText>Technical field used for migration between environments.</inlineHelpText>
        <label>Source Record Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Provisioning Plan Dependency</label>
    <nameField>
        <displayFormat>PPD{000000000}</displayFormat>
        <label>Provisioning Plan Relationship ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Provisioning Plan Dependency</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>